--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -35,7 +35,7 @@ jobs:
             flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
-            pytest api.calculator
+            pytest api/calculator/test_calculator.py
       - run: echo "Test completed"
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
