--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -36,6 +36,7 @@ jobs:
       - name: Test with pytest
         run: |
             pytest api/calculator/test_calculator.py
+            pytest --cov
       - run: echo "Test completed"
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
