--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
             python -m pip install --upgrade pip
             pip install flake8 pytest
-            if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+            #if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
             pip install pytest-cov
             pip install geopandas
             pip install requests
