added more tests

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -41,6 +41,7 @@ jobs:
         run: |
             pytest api/calculator/test_calculator.py
             pytest tests/test_geoboundaries.py
+            pytest tests/test_demographics.py
             pytest --cov
       - run: echo "Test completed"
       - name: Upload coverage reports to Codecov
