--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -42,7 +42,7 @@ jobs:
             pytest api/calculator/test_calculator.py
             pytest tests/test_geoboundaries.py
             pytest tests/test_demographics.py
-            pytest tests/test_google_trends.py
+            #pytest tests/test_google_trends.py
             pytest tests/test_meteorological.py
             pytest tests/test_nasa_appeears.py
             pytest tests/test_nasa_worldview.py
