--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -31,6 +31,7 @@ jobs:
             pip install geopandas
             pip install requests
             pip install pytrends
+            pip install wget
       - name: Lint with flake8
         run: |
             # stop the build if there are Python syntax errors or undefined names
