--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -46,7 +46,7 @@ jobs:
             #pytest tests/test_google_trends.py
             #pytest tests/test_meteorological.py
             #pytest tests/test_nasa_appeears.py
-            pytest tests/test_nasa_worldview.py
+            #pytest tests/test_nasa_worldview.py
             pytest tests/test_osm.py
             pytest --cov
       - run: echo "Test completed"
