--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -32,6 +32,7 @@ jobs:
             pip install requests
             pip install pytrends
             pip install wget
+            pip install osmnx
       - name: Lint with flake8
         run: |
             # stop the build if there are Python syntax errors or undefined names
