--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -33,6 +33,7 @@ jobs:
             pip install pytrends
             pip install wget
             pip install osmnx
+            pip install retrying
       - name: Lint with flake8
         run: |
             # stop the build if there are Python syntax errors or undefined names
