--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -49,7 +49,8 @@ jobs:
             #pytest tests/test_meteorological.py
             #pytest tests/test_nasa_appeears.py
             #pytest tests/test_nasa_worldview.py
-            pytest tests/test_osm.py
+            #pytest tests/test_osm.py
+            pytest tests/test_demographic_data.py
             pytest --cov
       - run: echo "Test completed"
       - name: Upload coverage reports to Codecov
