update all tests

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -47,6 +47,12 @@ jobs:
             run: |
                 pytest tests/test_geoboundaries.py
                 pytest tests/test_demographics.py
+                pytest tests/test_demographic_data.py 
+                pytest tests/test_demographics.py 
+                pytest tests/test_geoboundaries.py 
+                pytest tests/test_google_trends.py 
+                pytest tests/test_meteorological.py 
+                pytest tests/test_nasa_appeears.py                 
                 pytest --cov
           - run: echo "Test completed"
           - name: Upload coverage reports to Codecov
