--- a/.github/workflows/delete-workflows.yml
+++ b/.github/workflows/delete-workflows.yml
@@ -1,5 +1,6 @@
 name: Delete Workflows
 run-name: ${{ github.actor }} is deleting workflows 🚀
+on: [push]
 jobs:
     Delete-Workflows:
         runs-on: ubuntu-latest
